--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
-    "serve:api": "json-server data.json --watch --port 3001"
+    "serve": "vite preview"
   },
   "dependencies": {
     "react": "^17.0.0",
